# transcribing_tts

./: .gitignore  DEPLOYMENT.md  README.md  TODO.md  config.yaml  pyproject.toml
benchmark/: BENCHMARK.md  accuracy_eval.py  allin_20min.raw.txt  allin_20min.segments.json  allin_20min.txt  gold_eval.py  gold_results.json  reid_eval.py  run_testset_bf16.py  run_vibevoice_hf.py  run_vllm_testset.py  smoke_60s.raw.txt  smoke_60s.segments.json  transcribe_longform.py
benchmark/e2e/: requests.json  results.md  run.sh  run_longform.sh
benchmark/testset/: README.md  build_testset.py  manifest.json
clients/: README.md  gen.sh  openapi.json  python_example.py
clients/tts_serve_client/: __init__.py
clients/tts_serve_client/models/: __init__.py  agent_info_agent_info_get_response_agent_info_agent_info_get.py  body_upload_task_v1_tasks_upload_post.py  client_create.py  client_credentials.py  create_task_request.py  delete_result.py  health.py  queue_status.py  queue_status_counts.py  queued_item.py  running_info.py  task_list.py  task_ref.py  task_status.py  task_status_options.py
clients/typescript/: api.ts  example.ts
scripts/: bili_login.py  build_api_binary.sh  install_systemd.sh  tts_serve_api_entry.py
src/tts_serve/: asr.py  cli.py  core.py  diarize.py  name_suggest.py  outputs.py  pipeline.py  postprocess.py  sources.py
src/tts_serve/service/: __init__.py  api.py  logconf.py  models.py  store.py  worker.py
tests/: test_longform.py  test_outputs.py  test_postprocess.py  test_service.py  test_sources.py
(+11 files in other folders)
